--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
 title: IE360 Spring 2021
-description: Mustafa Furkan Deveci
+description: Mustafa Furkan Deveci Progress Journal
