--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-tactile
-title: IE360 Spring 2021
-description: Mustafa Furkan Deveci Progress Journal
+theme: jekyll-theme-dinky
+title: Mustafa Furkan Deveci Progress Journal
+description: IE 360 Spring 2021 Boğaziçi University
